[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sounds/Music/Battle Theme - alt Mix.wav" type="AudioStream" id=1]
[ext_resource path="res://Scenes/DebugSettings.gd" type="Script" id=3]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 866.0
margin_top = 492.0
margin_right = 1054.0
margin_bottom = 588.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 93.0
margin_bottom = 96.0

[node name="Resume" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 93.0
margin_bottom = 20.0
text = "Resume"

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 93.0
margin_bottom = 38.0
text = "Player Speed"

[node name="speedSlider" type="HSlider" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 93.0
margin_bottom = 58.0
min_value = 1.0
max_value = 25.0
value = 25.0

[node name="Label3" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 93.0
margin_bottom = 76.0
text = "Shotgun Range"

[node name="shotgunRange" type="HSlider" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 93.0
margin_bottom = 96.0
min_value = 1.0
value = 20.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 188.0
margin_bottom = 96.0

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 91.0
margin_bottom = 14.0
text = "Music Volume"

[node name="musicSlider" type="HSlider" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 34.0
min_value = -80.0
max_value = 15.0
value = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 5.0
autoplay = true
bus = "Music"
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/speedSlider" to="." method="_on_speedSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/shotgunRange" to="." method="_on_shotgunRange_value_changed"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2/musicSlider" to="." method="_on_musicSlider_value_changed"]
